# Riversi

./: Board.cpp  Board.h  CMakeLists.txt  ComPlayer.cpp  ComPlayer.h  ComPlayerTest.cpp  Game.cpp  Game.h  GameTest.cpp  GlobalDef.h  HumanPlayer.cpp  HumanPlayer.h  HumanPlayerTest.cpp  Logic.cpp  Logic.h  LogicTest.cpp  Path.cpp  Path.h  PathTest.cpp  Player.cpp  Player.h  Point.cpp  Point.h  README.md  clientSetting  info.txt  log  logfile  main.cpp  makefile
Test/: BoardTest.cpp  GameTest.cpp  Gtest_main.cpp  LogicTest.cpp  PathTest.cpp  PointTest.cpp
headers/: Client.h  ComPlayer.h  Game.h  HumanPlayer.h  LocalPlayer.h  Logic.h  Path.h  Player.h  Point.h  RemotePlayer.h
src/: Board.cpp  Client.cpp  ComPlayer.cpp  Game.cpp  HumanPlayer.cpp  LocalPlayer.cpp  Logic.cpp  Point.cpp  RemotePlayer.cpp
